--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,10 @@
 
 }
 
+body{
+	font: 16px 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
+
 h1 {
 	font-family: 'Georgia', Times, 'Times New Roman', serif;
 	color: #ffffff;
@@ -13,11 +17,20 @@ h1 {
 }
 
 h2 {
+	z-index: 3;
 	font-family: 'Georgia', Times, 'Times New Roman', serif;
 	color: #4aaaa5;
+	border-bottom: 2px solid #ccc;
 }
 
-#name {
+h3 {
+	font-family: 'Georgia', Times, 'Times New Roman', serif;
+	color: #4aaaa5;
+	border-bottom: 1px solid #ccc;
+
+}
+
+.name {
 	background-color: #4aaaa5;
 	margin-left: 155px;
 	width: 250px;
@@ -36,6 +49,7 @@ h2 {
 	margin-top: 100px;
 	width: 50%;
 	padding: 50px;
+	padding-bottom: 100px;
 	border: 1px;
 	border-style: block;
 	outline-color: #dddddd;
@@ -139,4 +153,46 @@ footer{
 	width: 100%;
 	height: 10%;
 
+}
+
+.portfolioImages{
+	background-color: #ffffff;
+	width: 560px;
+	height: 665px;
+	margin-left: 95px;
+	margin-right: 470px;
+	outline-style: block;
+	outline-color: #777777;
+	outline-width: 5px;
+}
+
+.placeHolderImg{
+	margin-left: 30px;
+	padding-top: 60;
+	width: 225px;
+	display: inline-block;
+	position: relative;
+}
+
+.photos{
+	width: 225px;
+}
+
+.portfolioText{
+position: absolute;
+z-index: 3;
+top: 130px;
+background-color: #4aaaa5;
+text-align: center;
+width: 225px;
+height: 40px;
+}
+
+#message{
+	width: 585px;
+	height: 200px;
+}
+
+#contactBoxes{
+	width: 585px;
 }
