--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,7 @@ h2 {
 	font-family: 'Georgia', Times, 'Times New Roman', serif;
 	color: #4aaaa5;
 	border-bottom: 2px solid #ccc;
+	margin-top: 80px;
 
 }
 
@@ -59,7 +60,7 @@ h3 {
 
 p {
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-	text-align: center;
+	line-height: 30px;
 
 }
 
@@ -178,7 +179,7 @@ footer{
 
 .placeHolderImg{
 	margin-left: 30px;
-	padding-top: 60;
+	padding-top: 90;
 	width: 225px;
 	display: inline-block;
 	position: relative;
@@ -187,13 +188,13 @@ footer{
 
 .photos{
 	width: 225px;
-
+	padding-top: 30px;
 }
 
 .portfolioText{
 position: absolute;
 z-index: 3;
-top: 130px;
+top: 160px;
 background-color: #4aaaa5;
 text-align: center;
 width: 225px;
