--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,9 +173,9 @@ footer{
 
 .portfolioImages{
 	background-color: #ffffff;
-	width: 560px;
-	height: 665px;
-	margin-left: 95px;
+	width: 600px;
+	height: 460px;
+	margin-left: 180px;
 	margin-right: 470px;
 	margin-top: 100px;
 	outline-style: solid;
@@ -186,7 +186,8 @@ footer{
 }
 
 .placeHolderImg{
-	margin-left: 30px;
+	margin-left: 50px;
+	padding-right: 30px;
 	padding-top: 90;
 	width: 225px;
 	display: inline-block;
